--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
+language: erlang
+otp_release:
+  - 19.2
 
-language: elixir
-otp_release: 19.2
-elixir: 1.4.2
+env:
+  - ELIXIR_VERSION=1.4.2
+
+before_install:
+    - wget https://github.com/elixir-lang/elixir/releases/download/v$ELIXIR_VERSION/Precompiled.zip
+    - unzip -d elixir Precompiled.zip
 
 sudo: false
 before_script:
+  - mix local.hex --force
   - cd bootstrap && mix install && cd -
   - mix deps.get --only test
 script:
