CI: bump to latest

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,5 @@
 otp_23_image: &otp_23_image
-  image: erlang:23.2.1
+  image: erlang:23.3
 
 otp_22_image: &otp_22_image
   image: erlang:22.3.4.5
@@ -37,7 +37,7 @@ jobs:
     docker:
       - <<: *otp_23_image
     environment:
-      ELIXIR_VERSION: 1.11.3-otp-23
+      ELIXIR_VERSION: 1.11.4-otp-23
       LC_ALL: C.UTF-8
     <<: *defaults
     steps:
@@ -46,10 +46,12 @@ jobs:
       - <<: *install_hex_rebar
       - <<: *install_nerves_bootstrap
       - run: mix deps.get
-      - run: mix test
       - run: mix format --check-formatted
+      - run: mix deps.unlock --check-unused
+      - run: mix compile --warnings-as-errors
       - run: mix docs
       - run: mix hex.build
+      - run: mix test
 
   build_elixir_1_10_otp_23:
     docker:
@@ -67,7 +69,6 @@ jobs:
       - run: mix compile --warnings-as-errors
       - run: mix test
       - run: mix format --check-formatted
-      - run: mix deps.unlock --check-unused
       - run: mix docs
       - run: mix hex.build
 
