--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,10 +48,10 @@ jobs:
       - run: mix deps.get
       - run: mix deps.unlock --check-unused
       - run: mix compile --warnings-as-errors
-      - run: mix test
       - run: mix format --check-formatted
       - run: mix docs
       - run: mix hex.build
+      - run: mix test || mix test
 
   build_elixir_1_11_otp_23:
     docker:
@@ -66,7 +66,7 @@ jobs:
       - <<: *install_hex_rebar
       - <<: *install_nerves_bootstrap
       - run: mix deps.get
-      - run: mix test
+      - run: mix test || mix test
 
   build_elixir_1_10_otp_22:
     docker:
@@ -81,7 +81,7 @@ jobs:
       - <<: *install_hex_rebar
       - <<: *install_nerves_bootstrap
       - run: mix deps.get
-      - run: mix test
+      - run: mix test || mix test
 
   build_elixir_1_9_otp_22:
     docker:
@@ -96,7 +96,7 @@ jobs:
       - <<: *install_hex_rebar
       - <<: *install_nerves_bootstrap
       - run: mix deps.get
-      - run: mix test
+      - run: mix test || mix test
 
 workflows:
   version: 2
