Add support for Elixir 1.13 and test on CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,20 @@ install_system_deps: &install_system_deps
         apk add build-base procps
 
 jobs:
+  build_elixir_1_13_otp_24:
+    docker:
+      - image: hexpm/elixir:1.13.0-rc.0-erlang-24.1.5-alpine-3.14.2
+    <<: *defaults
+    steps:
+      - checkout
+      - <<: *install_hex_rebar
+      - <<: *install_system_deps
+      - run: mix deps.get
+      - run: mix test || mix test
+
   build_elixir_1_12_otp_24:
     docker:
-      - image: hexpm/elixir:1.12.3-erlang-24.1-alpine-3.14.0
+      - image: hexpm/elixir:1.12.3-erlang-24.1.5-alpine-3.14.2
     <<: *defaults
     steps:
       - checkout
@@ -81,6 +92,7 @@ workflows:
   version: 2
   build_test:
     jobs:
+      - build_elixir_1_13_otp_24
       - build_elixir_1_12_otp_24
       - build_elixir_1_11_otp_23
       - build_elixir_1_10_otp_23
