--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ install_system_deps: &install_system_deps
 jobs:
   build_elixir_1_13_otp_24:
     docker:
-      - image: hexpm/elixir:1.13.0-rc.0-erlang-24.1.5-alpine-3.14.2
+      - image: hexpm/elixir:1.13.0-erlang-24.1.7-alpine-3.14.2
     <<: *defaults
     steps:
       - checkout
