Enable Credo in CI
Also does all the minor adjustments needed for Credo (and dialyzer) to pass

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       - run: mix docs
       - run: mix hex.build
       - run: mix test || mix test
-      # - run: mix credo -a
+      - run: mix credo -a
       - run: mix dialyzer
       - save_cache:
           key: v1-mix-cache-{{ checksum "mix.lock" }}
