Remove `nerves_bootstrap` mix dependency
Attempting to use `nerves_bootstrap` in this way currently as no effect.
The archive is needed to bootstrap in and will always look to the system
for it to be installed.

This has gone relatively unnoticed because all of the integration tests
are manually manipulating `Mix` API and forcing bootstrap behavior rather
than relying on the installed archive as expected

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,13 @@ defaults: &defaults
   environment:
     LC_ALL: C.UTF-8
 
-install_hex_rebar: &install_hex_rebar
+mix_setup: &mix_setup
   run:
-    name: Install hex and rebar
+    name: Install hex, rebar, and nerves_bootstrap
     command: |
       mix local.hex --force
       mix local.rebar --force
+      mix archive.install hex nerves_bootstrap --force
 
 install_system_deps: &install_system_deps
   run:
@@ -25,7 +26,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - <<: *install_hex_rebar
+      - <<: *mix_setup
       - <<: *install_system_deps
       - restore_cache:
           keys:
@@ -50,7 +51,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - <<: *install_hex_rebar
+      - <<: *mix_setup
       - <<: *install_system_deps
       - run: mix deps.get
       - run: mix test || mix test
@@ -61,7 +62,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - <<: *install_hex_rebar
+      - <<: *mix_setup
       - <<: *install_system_deps
       - run: mix deps.get
       - run: mix test || mix test
@@ -72,7 +73,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - <<: *install_hex_rebar
+      - <<: *mix_setup
       - <<: *install_system_deps
       - run: mix deps.get
       - run: mix test --exclude release || mix test --exclude release
@@ -83,7 +84,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - <<: *install_hex_rebar
+      - <<: *mix_setup
       - <<: *install_system_deps
       - run: mix deps.get
       - run: mix test --exclude release || mix test --exclude release
