Build from from rootfs.tar system files
Starts support to allow building firmware from a `rootfs.tar` tarball file more
efficiently in Elixir, rather than relying on bash scripts to unsquash,
combine, and resquash an FS.

It also adjusts the build process to allow using EROFS instead of squashfs when
making the firmware

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - run:
           name: Install system dependencies
-          command: apk add --no-cache build-base procps
+          command: apk add --no-cache build-base procps git
       - checkout
       - run:
           name: Install hex, rebar, and nerves_bootstrap
