--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ latest: &latest
 
 tags: &tags
   [
+    1.18.4-erlang-28.1-alpine-3.22.2,
     1.18.3-erlang-27.3.3-alpine-3.21.3,
     1.17.3-erlang-27.2-alpine-3.20.3,
     1.16.3-erlang-26.2.5-alpine-3.20.0,
