Install util-linux on CI for script command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - run:
           name: Install system dependencies
-          command: apk add --no-cache build-base procps
+          command: apk add --no-cache build-base procps util-linux
       - checkout
       - run:
           name: Install hex, rebar, and nerves_bootstrap
